--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -62,7 +62,25 @@ nav {
     font-size: 15px;
     color: rgb(116, 112, 112);
 }
+.logoRegistro {
+    margin: 1rem 0;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.logoRegistro img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
 
+.logoRegistro h1 {
+    margin-top: 1rem;
+}
+
+.logoRegistro span {
+    font-size: 15px;
+    color: rgb(116, 112, 112);
+}
 ul {
     width: 80%;
     margin: 0 auto;
